feat: add skils and fix workflow

--- a/package.json
+++ b/package.json
@@ -6,17 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "bridge:start": "node scripts/local-bridge.mjs",
+    "specflow": "tsx .opencode/scripts/specflow.ts",
+    "specflow:intake": "npm run specflow -- intake",
+    "specflow:issues": "npm run specflow -- create-issues",
+    "specflow:backfill-branches": "npm run specflow -- backfill-development-branches",
+    "specflow:worktrees": "npm run specflow -- provision-worktrees",
+    "specflow:pr": "npm run specflow -- create-pr",
+    "specflow:merge": "npm run specflow -- merge-pr",
+    "specflow:cleanup": "npm run specflow -- cleanup"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "lucide-react": "^0.564.0",
     "@google/genai": "^1.41.0",
-    "react": "^19.2.4"
+    "lucide-react": "^0.564.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "tsx": "^4.20.6",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
