--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "specflow:cleanup": "npm run specflow -- cleanup"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google/genai": "^1.41.0",
     "lucide-react": "^0.564.0",
     "react": "^19.2.4",
