--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
+"scripts": {
+    "setup": "cp .env.example .env.local",
+    "init": "npm install && npm run setup && npm start",
+    "start": "npm run dev & npm run bridge:start",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
